# cansat

./: README.md  outline.md  test.py
API/: .gitignore  ApiOutline.md  Cargo.toml
API/Data/: DistressCall.rs
API/Repository/: IDistressCallRepo.rs
API/data/: Cargo.toml
API/data/src/: Cordiantes.rs  DistressCall.rs  distress_call.rs  lib.rs
API/infrastructure/: Cargo.toml  cansat.db
API/infrastructure/migrations/2023-11-27-153319_create_distress_calls/: up.sql
API/infrastructure/src/: Database.rs  lib.rs  model.rs  schema.rs
API/repository/: Cargo.toml
API/repository/src/: DistressCallRepo.rs  IDistressCallRepo.rs  lib.rs
API/src/: main.rs
CANSAT/UiData/: eng.json  pl.json
CANSAT/main/: Display.hpp  DistressCall.hpp  Encoder.hpp  GPS.hpp  SD.hpp  SDCARD.hpp  Sensors.hpp  UI.hpp  button.hpp  main.ino  radio.hpp  temporarystorage.hpp
CANSAT/main/Data/: eng.json  eng1.json  lang.js  lang.json  pl1.json
GROUND_STATION/: GroundStationOutline.MD  api.py  com.py  lib.py  main.py
GROUND_STATION/RADIO_MODULE/main/: main.ino
