[package]
name = "API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.Repository]
path = "Repositiory"

[dependencies.Infrastructure]
path = "Infrastructure"

[dependencies.Data]
path = "Data"

[dependencies]
rocket = "0.5.0"