[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8"
base64 = "0.13"
uuid = {version = "1.6.1", features = ["v4"] }

[dependencies.repository]
path = "../repository"

[dependencies.data]
path = "../data"
